--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ __pycache__/
 ### VisualStudio Patch ###
 build/
 /MonsterApp/MonsterApp.dataAccess/App.config
+/MonsterApp/MonsterApp.Tests/App.config
