Add insert method for gender

--- a/MonsterApp/MonsterApp.dataAccess/MonsterApp.dataAccess.csproj
+++ b/MonsterApp/MonsterApp.dataAccess/MonsterApp.dataAccess.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdoData.cs" />
+    <Compile Include="AdoDataInsert.cs" />
     <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\MonsterType.cs" />
     <Compile Include="Models\Title.cs" />
