--- a/MonsterApp/MonsterApp.dataAccess/MonsterApp.dataAccess.csproj
+++ b/MonsterApp/MonsterApp.dataAccess/MonsterApp.dataAccess.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AdoData.cs" />
     <Compile Include="AdoDataInsert.cs" />
+    <Compile Include="AdoDataUpdate.cs" />
     <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\MonsterType.cs" />
     <Compile Include="Models\Title.cs" />
