--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,6 @@ __pycache__/
 build/
 /MonsterApp/MonsterApp.dataAccess/App.config
 /MonsterApp/MonsterApp.Tests/App.config
+/MonsterApp/Monster.App.DataAcess/Web.config
+/MonsterApp/Monster.App.DataAcess/Web.Debug.config
+/MonsterApp/Monster.App.DataAcess/Web.Release.config
