--- a/MonsterWeb/MonsterWeb.Client/MonsterWeb.Client.csproj
+++ b/MonsterWeb/MonsterWeb.Client/MonsterWeb.Client.csproj
@@ -51,6 +51,10 @@
     <Reference Include="Monster.App.DataAcess">
       <HintPath>..\..\MonsterApp\Monster.App.DataAcess\bin\Monster.App.DataAcess.dll</HintPath>
     </Reference>
+    <Reference Include="MonsterApp.dataAccess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\MonsterApp\Monster.App.DataAcess\bin\MonsterApp.dataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
